nginx-datadog.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        ad.datadoghq.com/nginx.checks: |
          {
            "nginx": {
              "init_config": {},
              "instances": [
                {
                  "nginx_status_url": "http://%%host%%/nginx_status"
                }
              ]
            }
          }
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  selector:
    app: nginx
  type: LoadBalancer 
  ports:
    - name: http
      port: 80
      targetPort: 80



# kubectl apply -f nginx-datadog.yaml

# fortio load -c 50 -t 10m -qps 50 http://k8s-default-nginx-7a9d1cd726-3d9f7dad04599f8c.elb.us-east-1.amazonaws.com/


# hey -q 50 -c 10 -z 10m  http://k8s-default-nginx-7a9d1cd726-3d9f7dad04599f8c.elb.us-east-1.amazonaws.com/

echo "GET http://k8s-default-nginx-7a9d1cd726-3d9f7dad04599f8c.elb.us-east-1.amazonaws.com" | vegeta attack -rate=50 -duration=5m | vegeta report
