service.yaml
# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stable
  namespace: app
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: meu-app
---
apiVersion: v1
kind: Service
metadata:
  name: app-canary
  namespace: app
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: meu-app
