app-with-alb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    #istio-injection: enabled
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: simple-color-app
        image: robarros/simple-color-app:1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: app
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: app
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - nginx.virtualti.net
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: app
spec:
  hosts:
    - nginx.virtualti.net
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx.app.svc.cluster.local
            port:
              number: 80
