vs.yaml
# virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: app # Namespace da sua aplicação
spec:
  hosts:
  - "*" # Ou o DNS configurado no seu ALB
  gateways:
  - istio-system/my-gateway # REFERÊNCIA AO GATEWAY CRIADO ACIMA
  #- mesh                         # IMPORTANTE: mantém o Canary funcionando internamente
  http:
  - name: primary-route
    route:
    - destination:
        host: app-stable
      weight: 100
    - destination:
        host: app-canary
      weight: 0
